--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
     <h2>Contact Us</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore,<br> expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex.<br> Nemo assumenda laborum vel, labore ut velit dignissimos</p>
   </div>
+  <div class="container2">
+    <h2>Copyright © Your Website 2023</h2>
+  </div>
 </body>
 </html>
