--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <title>Start Bootstrap</title>
 </head>
 <body>
-      <div class="container">
+    <div class="header">
+        <div class="nav">
+            <ul>
+            <li class="start-bootstrap"><a href="#">Start Bootstrap</a></li>
+            <li class="bootstrap-right"><a href="#">About</a></li>
+            <li class="bootstrap-right"><a href="#">Services</a></li>
+            <li class="bootstrap-right"><a href="#">Contact</a></li></div>
+            </ul>
+     </div> 
+    
+    <div class="container">
           <h1>Welcome to Scrolling Nav</h1>
           <p>A functional Bootstap 5 boilerplate for one page scrolling websites</p>
           <button id="button">Start Scrolling</button>
