--- a/index.html
+++ b/index.html
@@ -8,21 +8,12 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </head>
 <body>
-    <div class="header">
-        <div class="nav">
-            <ul>
-            <li class="start-bootstrap"><a href="#">Start Bootstrap</a></li>
-            <li class="bootstrap-right"><a href="#">About</a></li>
-            <li class="bootstrap-right"><a href="#">Services</a></li>
-            <li class="bootstrap-right"><a href="#">Contact</a></li></div>
-            </ul>
-     </div> 
-    
+   
+    </div>
     <div class="container">
           <h1>Welcome to Scrolling Nav</h1>
           <p>A functional Bootstap 5 boilerplate for one page scrolling websites</p>
-          <button class="btn btn-light" type="button">Start Scrolling</button>0
-
+          <button class="btn btn-light" type="button">Start Scrolling</button>
       </div>
     
     <div class="p1">
