--- a/project.html
+++ b/project.html
@@ -92,5 +92,78 @@
     </tbody>
         </table>
        </div>
+         <div class="heading"><h3>Unordered List</h3></div>
+         <nav><ul class="topnav">
+            <li>
+           Home
+          </li>
+            <li>
+            Products
+        </li>
+            <li>
+            Product 1
+            </li>
+            <li>
+            Product 2
+        </li>
+        <li>
+            About Us
+         </li>   
+         <li>
+            Contact
+        </li> 
+<hr>
+        </ul>
+        </nav>
+        <div class="heading"><h3>Ordered List</h3></div>
+        <nav><ul class="topnav">
+           <li>
+          Home
+         </li>
+           <li>
+           Products
+       </li>
+           <li>
+           Product 1
+           </li>
+           <li>
+           Product 2
+       </li>
+       <li>
+           About Us
+        </li>   
+        <li>
+           Contact
+       </li> 
+    </ul>
+</nav>
+<br>
+<br>
+
+<label for="password"><b>Password</b></label>
+
+
+<input type="text" placeholder="Enter Password" name="Password" id="Password" required/>
+         <br>
+         <br>
+<label for="email"><b>Email</b></label>
+         
+         
+<input type="text" placeholder="Enter Email" name="Email" id="Email" required/>
+<br>
+<br>         
+<input type="checkbox" name="brand"<div class="words">Remember Me</div>
+<br>
+<br>
+<button type="button" class="btn btn-primary">Sign In</button>
+<div class="header"><h3><br>Default Placement of Checkboxes</h3></div><br>
+<input type="checkbox" name="brand"<div class="words">Music</div><br><br>
+<input type="checkbox" name="brand"<div class="words">Travel</div><br><br>
+<input type="checkbox" name="brand"<div class="words">Reading</div>
+<hr>
+  <h3>Inline Placement of Checkboxes</h3><br>
+  <input type="checkbox" name="brand"<div class="words">Music</div>
+  <input type="checkbox" name="brand"<div class="words">Travel</div>
+  <input type="checkbox" name="brand"<div class="words">Reading</div>
 </body>
 </html>
